pkgs/artifacts/tests/tui/snapshots/tests__tui__view_tests__artifact_list_with_failed_status.snap
---
source: tests/tui/view_tests.rs
expression: result.to_string()
---
State:
ArtifactListState {
    selected_index: 0,
    selected_log_step: "Generate",
    artifacts: [
        ArtifactSnapshot {
            target: "machine-one",
            target_type: "nixos",
            name: "ssh-key",
            status: "Failed { error: ScriptFailed { script_name: \"Generator\", exit_code: Some(1), stderr_summary: \"ssh-keygen: permission denied\" }, output: \"\" }",
            has_logs: true,
        },
        ArtifactSnapshot {
            target: "machine-two",
            target_type: "nixos",
            name: "api-token",
            status: "UpToDate",
            has_logs: false,
        },
        ArtifactSnapshot {
            target: "user@host",
            target_type: "homemanager",
            name: "gpg-key",
            status: "NeedsGeneration",
            has_logs: false,
        },
    ],
    error: None,
}

Model:
ModelState {
    screen: "ArtifactList",
    selected_index: 0,
    selected_log_step: "Generate",
    active_prompt: None,
    artifacts: [
        ArtifactState {
            target: "machine-one",
            name: "ssh-key",
            status: "Failed { error: ScriptFailed { script_name: \"Generator\", exit_code: Some(1), stderr_summary: \"ssh-keygen: permission denied\" }, output: \"\" }",
            target_type: "nixos",
        },
        ArtifactState {
            target: "machine-two",
            name: "api-token",
            status: "UpToDate",
            target_type: "nixos",
        },
        ArtifactState {
            target: "user@host",
            name: "gpg-key",
            status: "NeedsGeneration",
            target_type: "homemanager",
        },
    ],
    error: None,
    warnings_count: 0,
}

Rendered:
"┌Artifacts (3)────────────────────┐┌Logs: machine-one/ssh-key────────┐"
"│> ✗ [N] machine-one/ssh-key      ││✗ FAILED                         │"
"│  ✓ [N] machine-two/api-token    ││Error: Generator failed (exit    │"
"│  ◐ [H] user@host/gpg-key        ││code 1)                          │"
"│                                 ││─────────────────────────────────│"
"│                                 ││──                               │"
"│                                 ││▶ Check                          │"
"└─────────────────────────────────┘│▼ Generate                       │"
"j/k:nav  Enter:gen  a:all  l:log  E│  | Generating SSH key pair...   │"
"○ Pend ◐ Need ✎ Input ✓ OK ✗ Fail ⊘└─────────────────────────────────┘"
