pkgs/artifacts/tests/tui/snapshots/tests__tui__view_tests__artifact_list_with_inline_prompt.snap
---
source: tests/tui/view_tests.rs
expression: result.to_string()
---
State:
ArtifactListState {
    selected_index: 0,
    selected_log_step: "Check",
    artifacts: [
        ArtifactSnapshot {
            target: "machine-one",
            target_type: "nixos",
            name: "ssh-key",
            status: "Pending",
            has_logs: false,
        },
        ArtifactSnapshot {
            target: "machine-two",
            target_type: "nixos",
            name: "api-token",
            status: "UpToDate",
            has_logs: false,
        },
        ArtifactSnapshot {
            target: "user@host",
            target_type: "homemanager",
            name: "gpg-key",
            status: "NeedsGeneration",
            has_logs: false,
        },
    ],
    error: None,
}

Model:
ModelState {
    screen: "ArtifactList",
    selected_index: 0,
    selected_log_step: "Check",
    active_prompt: Some(
        ActivePromptState {
            artifact_index: 0,
            artifact_name: "ssh-key",
            current_prompt_index: 0,
            total_prompts: 1,
        },
    ),
    artifacts: [
        ArtifactState {
            target: "machine-one",
            name: "ssh-key",
            status: "Pending",
            target_type: "nixos",
        },
        ArtifactState {
            target: "machine-two",
            name: "api-token",
            status: "UpToDate",
            target_type: "nixos",
        },
        ArtifactState {
            target: "user@host",
            name: "gpg-key",
            status: "NeedsGeneration",
            target_type: "homemanager",
        },
    ],
    error: None,
    warnings_count: 0,
}

Rendered:
"┌Artifacts (3) - j/k: move, Enter: gen,┐Prompt: ssh-key [1/1]                   "
"│> ✎ [N] machine-one/ssh-key Awaiting i│                                        "
"│  ✓ [N] machine-two/api-token         │────────────────────────────────────────"
"│  ◐ [H] user@host/gpg-key             │Field: passphrase                       "
"│                                      │Enter the SSH key passphrase            "
"│                                      │                                        "
"│                                      │                                        "
"│                                      │┌Input [line]──────────────────────────┐"
"│                                      ││> my-secret█                          │"
"│                                      │└──────────────────────────────────────┘"
"│                                      │Enter: submit | Esc: cancel             "
"│                                      │                                        "
"└──────────────────────────────────────┘                                        "
"○ Pend ◐ Need ✎ Input ✓ OK ✗ Fail ⊘ Canc                                        "
