pkgs/artifacts/tests/tui/snapshots/tests__tui__view_tests__artifact_list_with_selection.snap
---
source: tests/tui/view_tests.rs
expression: result.to_string()
---
State:
ArtifactListState {
    selected_index: 1,
    selected_log_step: "Generate",
    artifacts: [
        ArtifactSnapshot {
            target: "machine-one",
            target_type: "nixos",
            name: "ssh-key",
            status: "Pending",
            has_logs: false,
        },
        ArtifactSnapshot {
            target: "machine-two",
            target_type: "nixos",
            name: "api-token",
            status: "UpToDate",
            has_logs: true,
        },
        ArtifactSnapshot {
            target: "user@host",
            target_type: "homemanager",
            name: "gpg-key",
            status: "NeedsGeneration",
            has_logs: false,
        },
    ],
    error: None,
}

Model:
ModelState {
    screen: "ArtifactList",
    selected_index: 1,
    selected_log_step: "Generate",
    active_prompt: None,
    artifacts: [
        ArtifactState {
            target: "machine-one",
            name: "ssh-key",
            status: "Pending",
            target_type: "nixos",
        },
        ArtifactState {
            target: "machine-two",
            name: "api-token",
            status: "UpToDate",
            target_type: "nixos",
        },
        ArtifactState {
            target: "user@host",
            name: "gpg-key",
            status: "NeedsGeneration",
            target_type: "homemanager",
        },
    ],
    error: None,
    warnings_count: 0,
}

Rendered:
"┌Artifacts (3)────────────────────┐┌Logs: machine-two/api-token──────┐"
"│  ○ [N] machine-one/ssh-key      ││▶ Check                          │"
"│> ✓ [N] machine-two/api-token    ││▼ Generate                       │"
"│  ◐ [H] user@host/gpg-key        ││  | Generating API token...      │"
"│                                 ││  | Token generated successfully │"
"│                                 ││  ✓ Generated 1 file(s)          │"
"│                                 ││▶ Serialize                      │"
"└─────────────────────────────────┘│                                 │"
"j/k:nav  Enter:gen  a:all  l:log  E│                                 │"
"○ Pend ◐ Need ✎ Input ✓ OK ✗ Fail ⊘└─────────────────────────────────┘"
