pkgs/artifacts/tests/tui/snapshots/tests__tui__view_tests__artifact_list_with_shared_artifacts.snap
---
source: tests/tui/view_tests.rs
expression: result.to_string()
---
State:
ArtifactListState {
    selected_index: 0,
    selected_log_step: "Check",
    artifacts: [
        ArtifactSnapshot {
            target: "[shared]",
            target_type: "shared",
            name: "shared-secret",
            status: "NeedsGeneration",
            has_logs: false,
        },
        ArtifactSnapshot {
            target: "machine-one",
            target_type: "nixos",
            name: "local-secret",
            status: "Pending",
            has_logs: false,
        },
    ],
    error: None,
}

Rendered:
"┌Artifacts (2) - j/k: move, Enter:┐┌Logs: shared-secret──────────────┐"
"│> ◐ [S] shared-secret (2 targets)││No logs yet. Generate this       │"
"│  ○ [N] machine-one/local-secret ││artifact to see output.          │"
"│                                 ││                                 │"
"│                                 ││                                 │"
"│                                 ││                                 │"
"│                                 ││                                 │"
"│                                 ││                                 │"
"└─────────────────────────────────┘│                                 │"
"○ Pend ◐ Need ✎ Input ✓ OK ✗ Fail ⊘└─────────────────────────────────┘"
