pkgs/artifacts/tests/tui/snapshots/tests__tui__view_tests__generator_selection_many_sources.snap
---
source: tests/tui/view_tests.rs
expression: result.to_string()
---
State:
GeneratorSelectionSnapshot {
    artifact_name: "widely-used",
    selected_index: 0,
    generators: [
        GeneratorSnapshot {
            path: "/nix/store/shared-gen",
            sources: [
                SourceSnapshot {
                    target: "server-1",
                    target_type: "nixos",
                },
                SourceSnapshot {
                    target: "server-2",
                    target_type: "nixos",
                },
                SourceSnapshot {
                    target: "server-3",
                    target_type: "nixos",
                },
                SourceSnapshot {
                    target: "server-4",
                    target_type: "nixos",
                },
                SourceSnapshot {
                    target: "server-5",
                    target_type: "nixos",
                },
            ],
        },
    ],
}

Rendered:
"┌Select generator for shared artifact "widely-used"────────────────────────────┐"
"│> /nix/store/shared-gen (5 NixOS machines)                                    │"
"│      ├─NixOS: server-1                                                       │"
"│      ├─NixOS: server-2                                                       │"
"│      ├─NixOS: server-3                                                       │"
"│      ├─NixOS: server-4                                                       │"
"│      └─NixOS: server-5                                                       │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└ 1 generators found, 5 total targets. Selected generator will be used for all ┘"
