pkgs/artifacts/tests/tui/snapshots/tests__tui__view_tests__generator_selection_mixed_source_types.snap
---
source: tests/tui/view_tests.rs
expression: result.to_string()
---
State:
GeneratorSelectionSnapshot {
    artifact_name: "shared-cert",
    description: None,
    selected_index: 0,
    generators: [
        GeneratorSnapshot {
            path: "/nix/store/mixed-gen",
            sources: [
                SourceSnapshot {
                    target: "server-1",
                    target_type: "nixos",
                },
                SourceSnapshot {
                    target: "server-2",
                    target_type: "nixos",
                },
                SourceSnapshot {
                    target: "alice@laptop",
                    target_type: "homemanager",
                },
                SourceSnapshot {
                    target: "bob@desktop",
                    target_type: "homemanager",
                },
            ],
        },
    ],
    prompts: [],
    nixos_targets: [
        "server-1",
        "server-2",
    ],
    home_targets: [
        "alice@laptop",
        "bob@desktop",
    ],
}

Rendered:
"┌Artifact: shared-cert─────────────────────────────────────────────────────────┐"
"│Shared artifact                                                               │"
"│──────────────────────────────────────────────────────────────────────────────│"
"│Select generator for shared-cert                                              │"
"│──────────────────────────────────────────────────────────────────────────────│"
"│No description provided                                                       │"
"│──────────────────────────────────────────────────────────────────────────────│"
"│> /nix/store/mixed-gen  (2 machines, 2 users)                                 │"
"│──────────────────────────────────────────────────────────────────────────────│"
"│All targets:                                                                  │"
"│nixos: server-1                                                               │"
"│nixos: server-2                                                               │"
"│home: alice@laptop                                                            │"
"│home: bob@desktop                                                             │"
"│──────────────────────────────────────────────────────────────────────────────│"
"│j/k: move, Enter: select, Esc: cancel                                         │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
