pkgs/artifacts/tests/tui/snapshots/tests__tui__view_tests__generator_selection_multiple_generators.snap
---
source: tests/tui/view_tests.rs
expression: result.to_string()
---
State:
GeneratorSelectionSnapshot {
    artifact_name: "shared-api-key",
    description: None,
    selected_index: 0,
    generators: [
        GeneratorSnapshot {
            path: "/nix/store/xxx-gen-prod",
            sources: [
                SourceSnapshot {
                    target: "prod-server",
                    target_type: "nixos",
                },
            ],
        },
        GeneratorSnapshot {
            path: "/nix/store/yyy-gen-dev",
            sources: [
                SourceSnapshot {
                    target: "dev-machine",
                    target_type: "nixos",
                },
                SourceSnapshot {
                    target: "alice@workstation",
                    target_type: "homemanager",
                },
            ],
        },
    ],
    prompts: [],
    nixos_targets: [
        "prod-server",
        "dev-machine",
    ],
    home_targets: [
        "alice@workstation",
    ],
}

Rendered:
"┌Artifact: shared-api-key────────────────────────────────────────────┐"
"│Shared artifact                                                     │"
"│────────────────────────────────────────────────────────────────────│"
"│Select generator for shared-api-key                                 │"
"│────────────────────────────────────────────────────────────────────│"
"│No description provided                                             │"
"│────────────────────────────────────────────────────────────────────│"
"│> /nix/store/xxx-gen-prod  (1 machine)                              │"
"│  /nix/store/yyy-gen-dev  (1 machine, 1 user)                       │"
"│────────────────────────────────────────────────────────────────────│"
"│All targets:                                                        │"
"│nixos: dev-machine                                                  │"
"│nixos: prod-server                                                  │"
"│home: alice@workstation                                             │"
"│────────────────────────────────────────────────────────────────────│"
"│j/k: move, Enter: select, Esc: cancel                               │"
"│                                                                    │"
"│                                                                    │"
"│                                                                    │"
"└────────────────────────────────────────────────────────────────────┘"
