pkgs/artifacts/tests/tui/snapshots/tests__tui__view_tests__generator_selection_multiple_with_mixed_sources.snap
---
source: tests/tui/view_tests.rs
expression: result.to_string()
---
State:
GeneratorSelectionSnapshot {
    artifact_name: "complex-shared",
    description: None,
    selected_index: 1,
    generators: [
        GeneratorSnapshot {
            path: "/nix/store/gen-prod",
            sources: [
                SourceSnapshot {
                    target: "prod-1",
                    target_type: "nixos",
                },
                SourceSnapshot {
                    target: "prod-2",
                    target_type: "nixos",
                },
            ],
        },
        GeneratorSnapshot {
            path: "/nix/store/gen-dev",
            sources: [
                SourceSnapshot {
                    target: "dev-1",
                    target_type: "nixos",
                },
                SourceSnapshot {
                    target: "alice@dev",
                    target_type: "homemanager",
                },
                SourceSnapshot {
                    target: "bob@dev",
                    target_type: "homemanager",
                },
            ],
        },
        GeneratorSnapshot {
            path: "/nix/store/gen-personal",
            sources: [
                SourceSnapshot {
                    target: "charlie@home",
                    target_type: "homemanager",
                },
            ],
        },
    ],
    prompts: [],
    nixos_targets: [
        "prod-1",
        "prod-2",
        "dev-1",
    ],
    home_targets: [
        "alice@dev",
        "bob@dev",
        "charlie@home",
    ],
}

Rendered:
"┌Artifact: complex-shared──────────────────────────────────────────────────────┐"
"│Shared artifact                                                               │"
"│──────────────────────────────────────────────────────────────────────────────│"
"│Select generator for complex-shared                                           │"
"│──────────────────────────────────────────────────────────────────────────────│"
"│No description provided                                                       │"
"│──────────────────────────────────────────────────────────────────────────────│"
"│  /nix/store/gen-prod  (2 machines)                                           │"
"│> /nix/store/gen-dev  (1 machine, 2 users)                                    │"
"│  /nix/store/gen-personal  (1 user)                                           │"
"│──────────────────────────────────────────────────────────────────────────────│"
"│All targets:                                                                  │"
"│nixos: dev-1                                                                  │"
"│nixos: prod-1                                                                 │"
"│nixos: prod-2                                                                 │"
"│home: alice@dev                                                               │"
"│home: bob@dev                                                                 │"
"│home: charlie@home                                                            │"
"│──────────────────────────────────────────────────────────────────────────────│"
"│j/k: move, Enter: select, Esc: cancel                                         │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
