pkgs/artifacts/tests/tui/snapshots/tests__tui__view_tests__generator_selection_second_selected.snap
---
source: tests/tui/view_tests.rs
assertion_line: 828
expression: result.to_string()
---
State:
GeneratorSelectionSnapshot {
    artifact_name: "shared-api-key",
    selected_index: 1,
    generators: [
        GeneratorSnapshot {
            path: "/nix/store/xxx-gen-prod",
            sources: [
                SourceSnapshot {
                    target: "prod-server",
                    target_type: "nixos",
                },
            ],
        },
        GeneratorSnapshot {
            path: "/nix/store/yyy-gen-dev",
            sources: [
                SourceSnapshot {
                    target: "dev-machine",
                    target_type: "nixos",
                },
            ],
        },
    ],
}

Rendered:
"┌Select generator for shared artifact "shared-api-key"───────────────┐"
"│  /nix/store/xxx-gen-prod                                           │"
"│      - prod-server (nixos)                                         │"
"│                                                                    │"
"│> /nix/store/yyy-gen-dev                                            │"
"│      - dev-machine (nixos)                                         │"
"│                                                                    │"
"│                                                                    │"
"│                                                                    │"
"│                                                                    │"
"│                                                                    │"
"│                                                                    │"
"│                                                                    │"
"│                                                                    │"
"└ j/k: move, Enter: select, Esc: cancel ─────────────────────────────┘"
