pkgs/artifacts/tests/tui/snapshots/tests__tui__view_tests__generator_selection_singular_vs_plural.snap
---
source: tests/tui/view_tests.rs
expression: result.to_string()
---
State:
GeneratorSelectionSnapshot {
    artifact_name: "single-source-test",
    description: None,
    selected_index: 0,
    generators: [
        GeneratorSnapshot {
            path: "/nix/store/single-nixos",
            sources: [
                SourceSnapshot {
                    target: "server-1",
                    target_type: "nixos",
                },
            ],
        },
        GeneratorSnapshot {
            path: "/nix/store/single-home",
            sources: [
                SourceSnapshot {
                    target: "alice@laptop",
                    target_type: "homemanager",
                },
            ],
        },
    ],
    prompts: [],
    nixos_targets: [
        "server-1",
    ],
    home_targets: [
        "alice@laptop",
    ],
}

Rendered:
"┌Artifact: single-source-test──────────────────────────────────────────────────┐"
"│Shared artifact                                                               │"
"│──────────────────────────────────────────────────────────────────────────────│"
"│Select generator for single-source-test                                       │"
"│──────────────────────────────────────────────────────────────────────────────│"
"│No description provided                                                       │"
"│──────────────────────────────────────────────────────────────────────────────│"
"│> /nix/store/single-nixos  (1 machine)                                        │"
"│  /nix/store/single-home  (1 user)                                            │"
"│──────────────────────────────────────────────────────────────────────────────│"
"│All targets:                                                                  │"
"│nixos: server-1                                                               │"
"│home: alice@laptop                                                            │"
"│──────────────────────────────────────────────────────────────────────────────│"
"└──────────────────────────────────────────────────────────────────────────────┘"
